Fixed scrollbar css on windows

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -52,7 +52,7 @@ button {
 	height: 100vh;
 	margin-right: auto;
 	margin-left: auto;
-	overflow:scroll;
+	overflow:auto;
 }
 
 
