--- a/src/css/modes.css
+++ b/src/css/modes.css
@@ -12,7 +12,7 @@
 	grid-template-columns: repeat(3, 25%);
 	grid-column-gap: 8%;
 	grid-row-gap: 3%;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 #mode-grid-default {
