--- a/src/css/readings.css
+++ b/src/css/readings.css
@@ -13,7 +13,7 @@
 	grid-template-rows: repeat(1, minmax(150px, 20vh));
 	grid-column-gap: 4%;
 	grid-row-gap: 6%;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 
